--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+dotenvy = "0.15.7"
+jsonwebtoken = "9.3.1"
+once_cell = "1.21.3"
+poem = "3.1.11"
+poem-openapi = { version = "5.1.15", features = ["swagger-ui"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
