--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-devtools-json": "^0.2.0"
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
