--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit-supabase-template",
+	"name": "member-portal-frontend",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
