--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,13 @@ dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
 once_cell = "1.21.3"
 poem = "3.1.11"
-poem-openapi = { version = "5.1.15", features = ["swagger-ui"] }
+poem-openapi = { version = "5.1.15", features = ["swagger-ui", "uuid"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+sqlx = { version = "0.8.6", features = [
+  "postgres",
+  "runtime-tokio-rustls",
+  "uuid",
+] }
 tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
