--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.0.0",
 		"vite": "^6.2.6",
 		"vite-plugin-devtools-json": "^0.2.0"
@@ -27,6 +28,7 @@
 		"@lucide/svelte": "^0.524.0",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.50.0",
-		"bits-ui": "^2.8.10"
+		"bits-ui": "^2.8.10",
+		"zod": "^3.25.67"
 	}
 }
